--- a/_site.yml
+++ b/_site.yml
@@ -7,3 +7,10 @@ navbar:
       href: Emily.html
     - text: "Naomi"
       href: naomi.html
+output_dir: "."
+output:
+  html_document:
+    theme: cerulean
+    highlight: textmate
+    toc: true 
+    toc_float: true 
